sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:12: error: not found: value length
		for(i:Int <-0 to length-2){
                                 ^